--- a/app/design/frontend/Codazon/fastest/bigmarket/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Codazon/fastest/bigmarket/Magento_Catalog/templates/product/list.phtml
@@ -91,8 +91,9 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 			<ol class="products list items product-items same-height">
 				<?php /** @var $_product \Magento\Catalog\Model\Product */ ?>
 				<?php foreach ($_productCollection as $_product): ?>
-					<?php /* @escapeNotVerified */ echo($iterator++ == 1) ? '<li class="item product product-item">' : '</li><li class="item product product-item">' ?>
+					<?php /* @escapeNotVerified */ echo($iterator++ == 1) ? '<li class="item product product-item" style="padding: 0 5px;margin: 5px 0;">' : '</li><li class="item product product-item" style="padding: 0 5px;margin: 5px 0;">' ?>
 					<div class="product-item-info" data-container="product-grid">                	
+						<?php if($viewMode == 'grid') {?>						
 						<div class="cdz-hover-section">
 						<div class="cdz-product-top">
 						<?php						
@@ -104,7 +105,7 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 						}
 						?>
 						<?php // Product Image ?>
-							<?php if($viewMode == 'grid') {?>
+							
 						<a href="<?php /* @escapeNotVerified */ echo $_product->getProductUrl() ?>" class="product photo product-item-photo" tabindex="-1">
 							<span class="main-image">
 								<?php echo $productImage->toHtml(); ?>
@@ -113,17 +114,6 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 								<?php echo $productHoverImage->toHtml(); ?>
 							</span>
 						</a>
-							<?php } else{?>
-								<a href="<?php /* @escapeNotVerified */ echo $_product->getProductUrl() ?>" class="product photo product-item-photo" tabindex="-1">
-							<span class="main-image">
-								<?php echo $productImage->toHtml(); ?>
-							</span>
-							<span class="hover-image" style="width: 120px;">
-								<?php echo $productHoverImage->toHtml(); ?>
-							</span>
-								</a>
-							<?php
-							} ?>
 						<div class="qs-button-icon">
 						<?php echo $this->helper('Codazon\QuickShop\Helper\Data')->getQuickShopButton($_product,'show-tooltip'); ?>
 						</div>
@@ -144,11 +134,12 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 					</div>										
 						<?php $labelHelper->showLabel($_product) ?>									
 						</div>
+						<?php } ?>
 						<div class="product details product-item-details">
 							<?php
 								$_productNameStripped = $block->stripTags($_product->getName(), null, true);
 							?>
-							<strong class="product name product-item-name" style="<?php echo ($viewMode == 'list') ? 'float: left;    margin-top: 25px;    max-width: 70%;' : ''?>">
+							<strong class="product name product-item-name" style="<?php echo ($viewMode == 'list') ? 'float: left;    margin-top: 10px;    max-width: 70%;' : ''?>">
 								<a class="product-item-link"
 								   href="<?php /* @escapeNotVerified */ echo $_product->getProductUrl() ?>">
 									<?php /* @escapeNotVerified */ echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?>
@@ -157,7 +148,7 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 
 							<?php if($viewMode == 'list'){
 								?>
-							<div style="float: left;margin-top: 20px;margin-left: 10px">
+							<div style="float: right;margin-top: 5px;margin-left: 10px">
 								<?php /* @escapeNotVerified */ echo $block->getProductPrice($_product) ?>
 							</div>
 								<?php
@@ -202,8 +193,7 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 															        <div class="field qty box-tocart">								           
 															            <div class="control">
 															            	<div class="qty-minus"> <a class="btn-qty minus" href="#">-</a></div>
-																				<div class="qty-input">
-															                		<input type="number"
+																				<div class="qty-input">is
 																	               name="qty"
 																	               id="<?php echo $_product->getId() ?>_qty"
 																	               maxlength="12"
