Quntity Box issue on product listing page fixed

--- a/app/design/frontend/Codazon/fastest/bigmarket/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Codazon/fastest/bigmarket/Magento_Catalog/templates/product/list.phtml
@@ -193,7 +193,8 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 															        <div class="field qty box-tocart">								           
 															            <div class="control">
 															            	<div class="qty-minus"> <a class="btn-qty minus" href="#">-</a></div>
-																				<div class="qty-input">is
+																				<div class="qty-input">
+															                		<input type="number"
 																	               name="qty"
 																	               id="<?php echo $_product->getId() ?>_qty"
 																	               maxlength="12"
