--- a/app/design/frontend/Codazon/fastest/bigmarket/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Codazon/fastest/bigmarket/Magento_Catalog/templates/product/list.phtml
@@ -144,7 +144,7 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 					</div>										
 						<?php $labelHelper->showLabel($_product) ?>									
 						</div>
-						<div class="product details product-item-details">
+						<div class="product details product-item-details" style="<?php echo ($viewMode == 'list') ? 'height: auto !important; padding-top: 40px;' : ''?>">
 							<?php
 								$_productNameStripped = $block->stripTags($_product->getName(), null, true);
 							?>
