--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/layout/default_head_blocks.xml
@@ -10,5 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 		<css src="css/fontawesome/font-awesome.css" media="all" />
 		<css src="css/fontpeicon/pe-icon-7-stroke.css" media="all" />
+        <css src="css/styles-m.css" />
+        <css src="css/styles-l.css" media="screen and (min-width: 768px)"/>
     </head>
 </page>
