--- a/app/design/frontend/Codazon/fastest/fashion/web/css/styles-l.css
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/styles-l.css
@@ -20313,7 +20313,7 @@ ul.cdz-product-labels li.label-item.hot {
         margin-left: 105px;
     }
 }
-@media (min-width: 320px) and (max-width: 768px) {
+@media all and (min-width: 320px) and (max-width: 768px) {
     #mob-buyNowbt {
         position: fixed;
         bottom: 0;
