--- a/app/design/frontend/Codazon/fastest/fashion/web/css/styles-l.css
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/styles-l.css
@@ -20321,4 +20321,30 @@ ul.cdz-product-labels li.label-item.hot {
         background: rgba(0,0,0,.275);
         width: 100%;
     }
+    #mob-buyNowbt .btn {
+        font-size: 1.6rem;
+        display: inline-block;
+        margin-bottom: 0;
+        font-weight: 400;
+        text-align: center;
+        vertical-align: middle;
+        touch-action: manipulation;
+        cursor: pointer;
+        background-image: none;
+        border: 1px solid transparent;
+        white-space: nowrap;
+        padding: 6px 12px;
+        font-size: 13px;
+        line-height: 1.42857143;
+        border-radius: 2px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+    #mob-buyNowbt .btn-danger {
+        color: #fff;
+        background-color: #d9534f;
+        border-color: #d43f3a;
+    }
 }
