--- a/app/design/frontend/Codazon/fastest/fashion/web/css/styles-l.css
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/styles-l.css
@@ -20316,10 +20316,11 @@ ul.cdz-product-labels li.label-item.hot {
 @media all and (min-width: 320px) and (max-width: 768px) {
     #mob-buyNowbt {
         position: fixed;
-        bottom: 0;
+        bottom: 55px;
         padding: 8px 20px;
         background: rgba(0,0,0,.275);
         width: 100%;
+        z-index: 9999;
     }
     #mob-buyNowbt .btn {
         font-size: 1.6rem;
@@ -20346,5 +20347,6 @@ ul.cdz-product-labels li.label-item.hot {
         color: #fff;
         background-color: #d9534f;
         border-color: #d43f3a;
+        width: 100%;
     }
 }
