Call Us Mobile button styling

--- a/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_homestore.less
@@ -124,8 +124,8 @@
 	.left-navigation{
 		margin-top:0;
 		.navigation .menu-title{
-			padding:19px 10px 19px 20px;
-			min-height:60px;
+			padding:7px 10px 7px 20px;
+			//min-height:60px;
 		}
 		.cdz-vertical-menu{
 			display:none;				
