margin bottom for static block fixed

--- a/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_homestore.less
@@ -1283,6 +1283,8 @@
     width: 100%;
   }
 }
-.block-static-block.widget, .block-cms-link.widget{
-  margin-bottom: 0px;
+@media (min-width: 768px) and (max-width: 1199px) {
+  .block-static-block.widget, .block-cms-link.widget {
+    margin-bottom: 0px;
+  }
 }
