--- a/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_header.less
@@ -178,6 +178,11 @@
 			
 		}	
 	}
+	.header-wrapper-content{
+		.header.content{
+			padding: 10px;
+		}
+	}
 }
 //Desktop
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
