--- a/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_header.less
@@ -145,7 +145,7 @@
 					padding:0; min-height:0;	
 					display:block;
 					clear:both;
-					span{color:#fff;}
+					span{color:#333;}
 				}
 				.text{ 
 					position: relative;
