--- a/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_header.less
@@ -275,6 +275,11 @@
 		
 		
 	}
+	.full-slideshow-wrapper {
+		.block-static-block.widget, .block-cms-link.widget {
+			margin-bottom: 0px;
+		}
+	}
 }
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
 	.page-header .customer-welcome ul{
