Remove Pig icon with back arrow

--- a/app/design/frontend/Codazon/fastest/fashion/web/css/fontpeicon/pe-icon-7-stroke.css
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/fontpeicon/pe-icon-7-stroke.css
@@ -91,7 +91,7 @@
 	content: "\e6bf";
 }
 .pe-7s-piggy:before {
-	content: "\e6c0";
+	content: "\21b5";
 }
 .pe-7s-plugin:before {
 	content: "\e6c1";
