--- a/app/code/Magento/Checkout/view/frontend/templates/cart/shipping.phtml
+++ b/app/code/Magento/Checkout/view/frontend/templates/cart/shipping.phtml
@@ -10,11 +10,11 @@
 <?php /** @var $block \Magento\Checkout\Block\Cart\Shipping */ ?>
 
 <div id="block-shipping" class="block shipping" data-mage-init='{"collapsible":{"openedState": "active", "saveState": true}}'>
-    <div class="title" data-role="title">
-        <strong id="block-shipping-heading" role="heading" aria-level="2">
-        <?php /* @escapeNotVerified */ //$block->getQuote()->isVirtual() ? __('Estimate Tax') : __('Estimate Shipping and Tax') ?>
-        </strong>
-    </div>
+<!--    <div class="title" data-role="title">-->
+<!--        <strong id="block-shipping-heading" role="heading" aria-level="2">-->
+<!--        --><?php ///* @escapeNotVerified */ //$block->getQuote()->isVirtual() ? __('Estimate Tax') : __('Estimate Shipping and Tax') ?>
+<!--        </strong>-->
+<!--    </div>-->
     <div id="block-summary" data-bind="scope:'block-summary'" class="content" data-role="content" aria-labelledby="block-shipping-heading">
         <!-- ko template: getTemplate() --><!-- /ko -->
         <script type="text/x-magento-init">
